--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<title>Doina Timisului - Acasa</title>
-	<link href="img/dt.png"></link>
+	<link rel="Icon" type="image/png" href="img/dt.png" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
