--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Doina Timisului</title>
-        <link href="img/dt.png" />
+        <link rel="Icon" type="image/png" href="img/dt.png" />
 
         <link href="css/style.css" rel="stylesheet" />
     </head>
@@ -13,16 +13,23 @@
         <div class="dt-logo">
             <img src="img/dt.png" />
         </div>
+
         <h2 class="body-index-h2">Ansamblul Folcloric</h2>
         <h1 class="body-index-h1">"Doina Timișului"</h1>
         <h3 class="body-index-h3">Timișoara - România</h3>
 
-        <div class="video"></div>
         <div class="uk-flag">
             <a href="#"><img class="uk-flag-img" src="img/uk.png" /></a>
-        </div>
+            </div>
         <div class="ro-flag">
             <a href="home_ro.html"><img class="ro-flag-img" src="img/romania.png"/></a>
         </div>
+
+        <div class="video-index">
+            <video width="650" height="366" autoplay loop controls muted>
+                <source src="vid/clip.mp4" type="video/mp4" />
+            </video>
+        </div>
+        
     </body>
 </html>
