--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -18,13 +18,14 @@
             <div class="container">
                 <div class="navbar-header">
                    <div class="navbar-brand">
-						<a href="index.html"><h1>Ansamblul folcloric "Doina Timișului"</h1></a>
+						<a href="index.html"><img src="img/dt.png" /><h1>Ansamblul folcloric "Doina Timișului"</h1></a>
 					</div>
                 </div>				
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="home_ro.html" class="active">Acasă</a></li>
+							<li role="presentation"><a href="#">Repertoriu</a></li>
 							<li role="presentation"><a href="#">Galerie</a></li>
 							<li role="presentation"><a href="#">Contact</a></li>						
 						</ul>
@@ -61,6 +62,33 @@
 		</div><!--/#about-slider-->
 	</div><!--/#slider-->
 	<hr>
+	<div class="about">
+			<div class="container">
+				<div class="text-center">
+					<h2>Despre Noi</h2>
+					<div class="col-md-10 col-md-offset-1">
+						<p><span style="margin-left:5em">In</span> anul 1959 a luat fiinta "Doina Timisului", ansamblu care reuneste studenti de la aproape toate 
+							facultatile din Centrul Universitar din Timisoara, ansamblu care s-a facut foarte repede cunoscut pentru 
+							ca si-a luat drept scop sa aduca omagiu extrem de variatei culturi traditionale. Înalta tinuta a 
+							spectacolelor prezentate, autenticitatea cântecelor si a dansurilor, a traditiilor si costumelor, aduse 
+							pe scena cu mare arta, au adus în putin timp acestei formatii un mare renume atât în tara cît si în strainatate.
+							<br><br>
+							<span style="margin-left:5em">Partea</span> coregrafica a spectacolelor se îmbina armonios cu cea muzicala, fiind constituita pe aceleasi 
+							coordonate ca ale unui mozaic reprezentativ pentru toate zonele tarii. Partea muzicala a spectacolelor 
+							este sustinuta de o formatie orchestrala formata din viori, clarinete, taragot, acordeon, contrabas, 
+							chitara, saxofon si instrumente care redau culoarea specifica muzicii populare românesti: fluier, 
+							drâmba, ocarina, caval. În spectacolele ansamblului nostru sunt puse în valoare vechi melodii pe cale 
+							de disparitie, diverse melodii de ritualuri, foarte melodioase, cu ritmuri variate, antrenante, adesea 
+							sincopate si de asemenea melodii create si intrate recent în circulatie, melodii care exprima optimismul 
+							si bucuria de a trai care caracterizeaza sufletul poporului nostru. Repertoriul orchestrei, a 
+							interpretilor si solistilor instrumentisti cuprinde melodii din toate zonele tarii: de la doina din 
+							Banat la brâul din Muntenia, de la hora din Moldova la învârtita din Transilvania, care constituie un 
+							amplu mozaic, reprezentativ si pitoresc al melosului popular românesc.</p>
+					</div>
+				</div>	
+			</div>			
+		</div>
+	<hr>
 
 	<section class="action">
 		<div class="container">
@@ -78,7 +106,7 @@
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>Despre noi</h4>
+				<h4>Contact rapid</h4>
 				<p>Mai multe informații puteți găsii la sediul Casei de Cultură a Studenților sau la telefon.</p>						
 				<div class="contact-info">
 					<ul>
@@ -121,6 +149,9 @@
 				<div class="copyright">
 					&copy; Doina Timișului 2018
 				</div>
+				<div class="login">
+					<a href="#"><h5><img src="img/login.png" /> Autentificare</h5></a>
+				</div>
 			</div>						
 		</div>				
 	</div>
@@ -131,9 +162,7 @@
 	<script>
 	wow = new WOW(
 	 {
-	
-		}	) 
-		.init();
+		}).init();
 	</script>	
   </body>
 </html>
