--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -26,14 +26,14 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="home_ro.html" class="active">Acasă</a></li>
 							<li role="presentation"><a href="#">Repertoriu</a></li>
-							<li role="presentation"><a href="#">Galerie</a></li>
+							<li role="presentation"><a href="galerie_ro.html">Galerie</a></li>
 							<li role="presentation"><a href="#">Contact</a></li>						
 						</ul>
 					</div>
 				</div>		
-            </div><!--/.container-->
-        </nav><!--/nav-->		
-    </header><!--/header-->	
+            </div>
+        </nav>	
+    </header>
 	
 	<div class="slider">		
 		<div id="about-slider">
