--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	
 	<title>Doina Timisului - Acasa</title>
 	<link rel="Icon" type="image/png" href="img/dt.png" />
 
