--- a/site/galerie_ro.html
+++ b/site/galerie_ro.html
@@ -3,7 +3,7 @@
   <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	
-	<title>Doina Timisului - Galerie</title>
+	<title>Doina Timișului - Galerie</title>
 	<link rel="Icon" type="image/png" href="img/dt.png" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -41,9 +41,9 @@
 	<div class="about-gallery">
 			<div class="container">
 				<div class="text-center">
-					<h2>Doina Timisului... prin lume</h2>
+					<h2>Doina Timișului... prin lume</h2>
 					<div class="col-md-10 col-md-offset-1">
-						<p class="gallery-p">In toti acesti ani de activitate, Ansamblul folcloric "Doina Timisului" a reprezentat Romania la mai multe festivaluri internationale.</p>
+						<p class="gallery-p">În toți acești ani de activitate, Ansamblul folcloric "Doina Timișului" a reprezentat România la multe festivaluri internaționale.</p>
                     </div>
                 </div>
                 <div class="gallery">
