--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -3,7 +3,7 @@
   <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	
-	<title>Doina Timisului - Acasa</title>
+	<title>Doina Timișului - Acasa</title>
 	<link rel="Icon" type="image/png" href="img/dt.png" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -16,7 +16,6 @@
   <body>	
 	<header id="header">
         <nav class="navbar navbar-default navbar-static-top" role="banner">
-			<!-- <div><img src="dt.png" width="20px"/></div> -->
             <div class="container">
                 <div class="navbar-header">
                    <div class="navbar-brand">
@@ -69,7 +68,7 @@
 				<div class="text-center">
 					<h2>Despre Noi</h2>
 					<div class="col-md-10 col-md-offset-1">
-						<p><span style="margin-left:5em">In</span> anul 1959 a luat fiinta "Doina Timisului", ansamblu care reuneste studenti de la aproape toate 
+						<p><span style="margin-left:5em">În</span> anul 1959 a luat ființă "Doina Timisului", ansamblu care reunește studenți de la aproape toate 
 							facultatile din Centrul Universitar din Timisoara, ansamblu care s-a facut foarte repede cunoscut pentru 
 							ca si-a luat drept scop sa aduca omagiu extrem de variatei culturi traditionale. Înalta tinuta a 
 							spectacolelor prezentate, autenticitatea cântecelor si a dansurilor, a traditiilor si costumelor, aduse 
@@ -152,7 +151,32 @@
 					&copy; Doina Timișului 2018
 				</div>
 				<div class="login">
-					<a href="#"><h5><img src="img/login.png" /> Autentificare</h5></a>
+					<button type="button" class="login-button" data-toggle="modal" data-target="#loginModal"><img src="img/login.png" /> Autentificare</button>
+				</div>
+				<div class="modal fade" role="dialog" id="loginModal">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal">&times;</button>
+								<h3 class="modal-title">Autentificare</h3>
+							</div>
+
+							<div class="modal-body">
+								<form>
+									<div class="form-group">
+										<input type="text" name="username" class="form-control" placeholder="Nume utilizator">
+									</div>
+									<div class="form-group">
+										<input type="password" name="password" class="form-control" placeholder="Parolă">
+									</div>
+								</form>
+							</div>
+
+							<div class="modal-footer">
+								<button type="submit" class="btn btn-success">Autentifică-te</button>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>						
 		</div>				
