--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -162,19 +162,20 @@
 							</div>
 
 							<div class="modal-body">
-								<form>
+								<form method="POST" action="login.php">
 									<div class="form-group">
 										<input type="text" name="username" class="form-control" placeholder="Nume utilizator">
 									</div>
 									<div class="form-group">
 										<input type="password" name="password" class="form-control" placeholder="Parolă">
 									</div>
-								</form>
+								
 							</div>
 
 							<div class="modal-footer">
 								<button type="submit" class="btn btn-success">Autentifică-te</button>
 							</div>
+						</form>
 						</div>
 					</div>
 				</div>
