--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Doina Timisului</title>
+        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+        
+        <title>Doina Timișului</title>
         <link rel="Icon" type="image/png" href="img/dt.png" />
 
         <link href="css/style.css" rel="stylesheet" />
