--- a/site/galerie_ro.html
+++ b/site/galerie_ro.html
@@ -30,7 +30,7 @@
 							<li role="presentation"><a href="home_ro.html">Acasă</a></li>
 							<li role="presentation"><a href="#">Repertoriu</a></li>
 							<li role="presentation"><a href="galerie_ro.html" class="active">Galerie</a></li>
-							<li role="presentation"><a href="#">Contact</a></li>						
+							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
 					</div>
 				</div>		
@@ -282,6 +282,69 @@
 					<div>
 						<a href="img/gallery/2002, Drummondville.JPG" data-lightbox="drummondville"><img src="img/gallery/2002, Drummondville.JPG" alt="2002, Drummondville" /></a>
 					</div>
+					<hr>
+					<div class="text">2001, Tournai (Belgia)</div>
+					<div>
+						<a href="img/gallery/2001, Brussels 1.jpg" data-lightbox="brussels"><img src="img/gallery/2001, Brussels 1.jpg" alt="2001, Tournai" /></a>
+						<a href="img/gallery/2001, Brussels 2.jpg" data-lightbox="brussels"><img src="img/gallery/2001, Brussels 2.jpg" alt="2001, Tournai" /></a>
+					</div>
+					<hr>
+					<div class="text">2001, Fribourg (Elvetia)</div>
+					<div>
+						<a href="img/gallery/2001, Fribourg 1.jpg" data-lightbox="fribourg"><img src="img/gallery/2001, Fribourg 1.jpg" alt="2001, Fribourg" /></a>
+						<a href="img/gallery/2001, Fribourg 2.jpg" data-lightbox="fribourg"><img src="img/gallery/2001, Fribourg 2.jpg" alt="2001, Fribourg" /></a>
+						<a href="img/gallery/2001, Fribourg 3 jpg" data-lightbox="fribourg"><img src="img/gallery/2001, Fribourg 3.jpg" alt="2001, Fribourg" /></a>
+						<a href="img/gallery/2001, Fribourg 4.jpg" data-lightbox="fribourg"><img src="img/gallery/2001, Fribourg 4.jpg" alt="2001, Fribourg" /></a>
+					</div>
+					<hr>
+					<div class="text">2001, Szashalombatta (Ungaria)</div>
+					<div>
+						<a href="img/gallery/2001, Szashalombatta 1.jpg" data-lightbox="szashalombatta"><img src="img/gallery/2001, Szashalombatta 1.jpg" alt="2001, Szashalombatta" /></a>
+						<a href="img/gallery/2001, Szashalombatta 2.jpg" data-lightbox="szashalombatta"><img src="img/gallery/2001, Szashalombatta 2.jpg" alt="2001, Szashalombatta" /></a>
+						<a href="img/gallery/2001, Szashalombatta 3.jpg" data-lightbox="szashalombatta"><img src="img/gallery/2001, Szashalombatta 3.jpg" alt="2001, Szashalombatta" /></a>
+						<a href="img/gallery/2001, Szashalombatta 4.jpg" data-lightbox="szashalombatta"><img src="img/gallery/2001, Szashalombatta 4.jpg" alt="2001, Szashalombatta" /></a>
+					</div>
+					<hr>
+					<div class="text">2000, Tokyo (Japonia)</div>
+					<div>
+						<a href="img/gallery/2000, Tokyo 1.jpg" data-lightbox="tokyo"><img src="img/gallery/2000, Tokyo 1.jpg" alt="2000, Tokyo" /></a>
+						<a href="img/gallery/2000, Tokyo 2.jpg" data-lightbox="tokyo"><img src="img/gallery/2000, Tokyo 2.jpg" alt="2000, Tokyo" /></a>
+					</div>
+					<hr>
+					<div class="text">1999, Ismailia (Egipt)</div>
+					<div>
+						<a href="img/gallery/1999, Ismailia 1.jpg" data-lightbox="ismailia2"><img src="img/gallery/1999, Ismailia 1.jpg" alt="1999, Ismailia" /></a>
+						<a href="img/gallery/1999, Ismailia 2.jpg" data-lightbox="ismailia2"><img src="img/gallery/1999, Ismailia 2.jpg" alt="1999, Ismailia" /></a>
+					</div>
+					<hr>
+					<div class="text">1999, Escaldes (Andorra)</div>
+					<div>
+						<a href="img/gallery/1999, Andorra.jpg" data-lightbox="andorra"><img src="img/gallery/1999, Andorra.jpg" alt="1999, Andorra" /></a>
+					</div>
+					<hr>
+					<div class="text">1998, Zakopane (Polonia)</div>
+					<div>
+						<a href="img/gallery/1998, Zakopane 1.jpg" data-lightbox="zakopane2"><img src="img/gallery/1998, Zakopane 1.jpg" alt="1998, Zakopane" /></a>
+						<a href="img/gallery/1998, Zakopane 2.jpg" data-lightbox="zakopane2"><img src="img/gallery/1998, Zakopane 2.jpg" alt="1998, Zakopane" /></a>
+					</div>
+					<hr>
+					<div class="text">1998, Waynesville (S.U.A.)</div>
+					<div>
+						<a href="img/gallery/1998, Waynesville 1.jpg" data-lightbox="waynesville"><img src="img/gallery/1998, Waynesville 1.jpg" alt="1998, Waynesville" /></a>
+						<a href="img/gallery/1998, Waynesville 2.jpg" data-lightbox="waynesville"><img src="img/gallery/1998, Waynesville 2.jpg" alt="1998, Waynesville" /></a>
+						<a href="img/gallery/1998, Waynesville 3.jpg" data-lightbox="waynesville"><img src="img/gallery/1998, Waynesville 3.jpg" alt="1998, Waynesville" /></a>
+						<a href="img/gallery/1998, Waynesville 4.jpg" data-lightbox="waynesville"><img src="img/gallery/1998, Waynesville 4.jpg" alt="1998, Waynesville" /></a>
+					</div>
+					<hr>
+					<div class="text">1997, Dijon (Franta)</div>
+					<div>
+						<a href="img/gallery/1997, Dijon.jpg" data-lightbox="dijon"><img src="img/gallery/1997, Dijon.jpg" alt="1997, Dijon" /></a>
+					</div>
+					<hr>
+					<div class="text">1997, Sidmouth (Anglia)</div>
+					<div>
+						<a href="img/gallery/1997, Sidmouth.jpg" data-lightbox="sidmouth"><img src="img/gallery/1997, Sidmouth.jpg" alt="1997, Sidmouth" /></a>
+					</div>
                 </div>
 			</div>				
 	</div>
@@ -333,7 +396,7 @@
     <script src="js/jquery.js"></script>		
     <script src="js/bootstrap.min.js"></script>	
     <script src="js/wow.min.js"></script>
-    <script src="js/lightbox-plus-jquery.min.js"></script>
+	<script src="js/lightbox-plus-jquery.min.js"></script>
 	<script>
 	wow = new WOW(
 	 {
