--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -28,7 +28,7 @@
 							<li role="presentation"><a href="home_ro.html" class="active">Acasă</a></li>
 							<li role="presentation"><a href="#">Repertoriu</a></li>
 							<li role="presentation"><a href="galerie_ro.html">Galerie</a></li>
-							<li role="presentation"><a href="#">Contact</a></li>						
+							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
 					</div>
 				</div>		
@@ -161,21 +161,19 @@
 								<h3 class="modal-title">Autentificare</h3>
 							</div>
 
-							<div class="modal-body">
-								<form method="POST" action="login.php">
+							<form method="POST" action="login.php"></form>
+								<div class="modal-body">
 									<div class="form-group">
 										<input type="text" name="username" class="form-control" placeholder="Nume utilizator">
 									</div>
 									<div class="form-group">
 										<input type="password" name="password" class="form-control" placeholder="Parolă">
 									</div>
-								
-							</div>
-
-							<div class="modal-footer">
-								<button type="submit" class="btn btn-success">Autentifică-te</button>
-							</div>
-						</form>
+								</div>
+								<div class="modal-footer">
+									<button type="submit" class="btn btn-success">Autentifică-te</button>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
