--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -48,7 +48,7 @@
 						<img src="img/slider2.png" class="img-responsive" /> 
 					</div> 
 					<div class="item">
-							<img src="img/slider3.png" class="img-responsive" /> 
+						<img src="img/slider3.png" class="img-responsive" /> 
 					</div>
 				</div>
 				
@@ -98,7 +98,7 @@
 				<p><em>Dansatorii Ansamblului Folcloric "Doina Timișului" vă pot oferii momente de neuitat!</em>
 					<br><br>Apăsați butonul de mai jos și completați formularul!</p>
 					<br><br>
-				<button class="anim-btn"><span>Formular</span></button>
+				<a href="formular.html"><button class="anim-btn"><span>Formular</span></button></a>
 			</div>
 			<div class="right-image hidden-xs"></div>
 		</div>
@@ -161,7 +161,7 @@
 								<h3 class="modal-title">Autentificare</h3>
 							</div>
 
-							<form method="POST" action="login.php"></form>
+							<form method="POST" action="login.php">
 								<div class="modal-body">
 									<div class="form-group">
 										<input type="text" name="username" class="form-control" placeholder="Nume utilizator">
