--- a/site/contact.html
+++ b/site/contact.html
@@ -50,19 +50,19 @@
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
-<!--!!!! -->                <form id="main-contact-form" class="contact-form" name="contact-form" method="post">
+<!--!!!! -->                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="email.php">
                     <div class="col-sm-5 col-sm-offset-1">
                         <div class="form-group">
                             <label>Nume *</label>
                             <input type="text" name="name" class="form-control" required="required">
                         </div>
                         <div class="form-group">
-                            <label>E-mail *</label>
+                            <label>Email *</label>
                             <input type="email" name="email" class="form-control" required="required">
                         </div>
                         <div class="form-group">
                             <label>Telefon</label>
-                            <input type="text" class="form-control">
+                            <input type="text" name="telefon" class="form-control">
                         </div>                       
                     </div>
                     <div class="col-sm-5">
