--- a/site/galerie_ro.html
+++ b/site/galerie_ro.html
@@ -17,7 +17,6 @@
   <body>	
 	<header id="header">
         <nav class="navbar navbar-default navbar-static-top" role="banner">
-			<!-- <div><img src="dt.png" width="20px"/></div> -->
             <div class="container">
                 <div class="navbar-header">
                    <div class="navbar-brand">
@@ -28,9 +27,9 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="home_ro.html">Acasă</a></li>
-							<li role="presentation"><a href="#">Repertoriu</a></li>
+							<li role="presentation"><a href="repertoriu_ro.html">Repertoriu</a></li>
 							<li role="presentation"><a href="galerie_ro.html" class="active">Galerie</a></li>
-							<li role="presentation"><a href="contact.html">Contact</a></li>						
+							<li role="presentation"><a href="contact_ro.html">Contact</a></li>						
 						</ul>
 					</div>
 				</div>		
