--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -26,9 +26,9 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="home_ro.html" class="active">Acasă</a></li>
-							<li role="presentation"><a href="#">Repertoriu</a></li>
+							<li role="presentation"><a href="repertoriu_ro.html">Repertoriu</a></li>
 							<li role="presentation"><a href="galerie_ro.html">Galerie</a></li>
-							<li role="presentation"><a href="contact.html">Contact</a></li>						
+							<li role="presentation"><a href="contact_ro.html">Contact</a></li>						
 						</ul>
 					</div>
 				</div>		
