--- a/site/galerie_ro.html
+++ b/site/galerie_ro.html
@@ -391,15 +391,36 @@
 			</div>						
 		</div>				
 	</div>
-	
+
+	<a href="#" class="to-top"><i class="fa fa-chevron-up"></i></a>
+		
     <script src="js/jquery.js"></script>		
     <script src="js/bootstrap.min.js"></script>	
     <script src="js/wow.min.js"></script>
 	<script src="js/lightbox-plus-jquery.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<script>
 	wow = new WOW(
 	 {
 		}).init();
-	</script>	
+	</script>
+	<script>            
+		jQuery(document).ready(function() {
+			var duration = 500;
+			jQuery(window).scroll(function() {
+				if (jQuery(this).scrollTop() > 200) {
+					jQuery('.to-top').fadeIn(duration);
+				} else {
+					jQuery('.to-top').fadeOut(duration);
+				}
+			});
+		
+			jQuery('.to-top').click(function(event) {
+				event.preventDefault();
+				jQuery('html').animate({scrollTop: 0}, duration);
+				return false;
+			})
+		});
+	</script>
   </body>
 </html>
