--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -180,6 +180,8 @@
 			</div>						
 		</div>				
 	</div>
+
+	<a href="#" class="to-top"><i class="fa fa-chevron-up"></i></a>
 	
     <script src="js/jquery.js"></script>		
     <script src="js/bootstrap.min.js"></script>	
@@ -188,6 +190,24 @@
 	wow = new WOW(
 	 {
 		}).init();
+	</script>
+	<script>            
+		jQuery(document).ready(function() {
+			var duration = 500;
+			jQuery(window).scroll(function() {
+				if (jQuery(this).scrollTop() > 200) {
+					jQuery('.to-top').fadeIn(duration);
+				} else {
+					jQuery('.to-top').fadeOut(duration);
+				}
+			});
+			
+			jQuery('.to-top').click(function(event) {
+				event.preventDefault();
+				jQuery('html').animate({scrollTop: 0}, duration);
+				return false;
+			})
+		});
 	</script>	
   </body>
 </html>
