--- a/site/home_ro.html
+++ b/site/home_ro.html
@@ -68,23 +68,24 @@
 				<div class="text-center">
 					<h2>Despre Noi</h2>
 					<div class="col-md-10 col-md-offset-1">
-						<p><span style="margin-left:5em">În</span> anul 1959 a luat ființă "Doina Timisului", ansamblu care reunește studenți de la aproape toate 
-							facultatile din Centrul Universitar din Timisoara, ansamblu care s-a facut foarte repede cunoscut pentru 
-							ca si-a luat drept scop sa aduca omagiu extrem de variatei culturi traditionale. Înalta tinuta a 
-							spectacolelor prezentate, autenticitatea cântecelor si a dansurilor, a traditiilor si costumelor, aduse 
-							pe scena cu mare arta, au adus în putin timp acestei formatii un mare renume atât în tara cît si în strainatate.
+						<p><span style="margin-left:5em">În</span> anul 1959 a luat ființă "Doina Timișului", ansamblu care reunește 
+							studenți de la aproape toate facultățile din Centrul Universitar din Timișoara, ansamblu care s-a făcut 
+							foarte repede cunoscut pentru că și-a luat drept scop să aduca omagiu extrem de variaței culturi 
+							tradiționale. Înalta ținută a spectacolelor prezentate, autenticitatea cântecelor și a dansurilor, a 
+							tradițiilor și costumelor, aduse pe scena cu mare artă, au adus în puțin timp acestei formații un mare 
+							renume atât în țara cît și în străinătate.
 							<br><br>
-							<span style="margin-left:5em">Partea</span> coregrafica a spectacolelor se îmbina armonios cu cea muzicala, fiind constituita pe aceleasi 
-							coordonate ca ale unui mozaic reprezentativ pentru toate zonele tarii. Partea muzicala a spectacolelor 
-							este sustinuta de o formatie orchestrala formata din viori, clarinete, taragot, acordeon, contrabas, 
-							chitara, saxofon si instrumente care redau culoarea specifica muzicii populare românesti: fluier, 
-							drâmba, ocarina, caval. În spectacolele ansamblului nostru sunt puse în valoare vechi melodii pe cale 
-							de disparitie, diverse melodii de ritualuri, foarte melodioase, cu ritmuri variate, antrenante, adesea 
-							sincopate si de asemenea melodii create si intrate recent în circulatie, melodii care exprima optimismul 
-							si bucuria de a trai care caracterizeaza sufletul poporului nostru. Repertoriul orchestrei, a 
-							interpretilor si solistilor instrumentisti cuprinde melodii din toate zonele tarii: de la doina din 
-							Banat la brâul din Muntenia, de la hora din Moldova la învârtita din Transilvania, care constituie un 
-							amplu mozaic, reprezentativ si pitoresc al melosului popular românesc.</p>
+							<span style="margin-left:5em">Partea</span> coregrafică a spectacolelor se îmbină armonios cu cea 
+							muzicală, fiind constituită pe aceleași coordonate ca ale unui mozaic reprezentativ pentru toate zonele 
+							țării. Partea muzicală a spectacolelor este susținută de o formație orchestrală formată din viori, 
+							clarinete, taragot, acordeon, contrabas, chitară, saxofon și instrumente care redau culoarea specifică 
+							muzicii populare românești: fluier, drâmbă, ocarină, caval. În spectacolele ansamblului nostru sunt puse 
+							în valoare vechi melodii pe cale de dispariție, diverse melodii de ritualuri, foarte melodioase, cu 
+							ritmuri variate, antrenante, adesea 	sincopate și de asemenea melodii create și intrate recent în 
+							circulație, melodii care exprimă optimismul și bucuria de a trăi care caracterizează sufletul poporului 
+							nostru. Repertoriul orchestrei, a interpreților și soliștilor instrumentiști cuprinde melodii din toate 
+							zonele țarii: de la doina din Banat la brâul din Muntenia, de la hora din Moldova la învârtita din 
+							Transilvania, care constituie un amplu mozaic, reprezentativ și pitoresc al melosului popular românesc.</p>
 					</div>
 				</div>	
 			</div>			
@@ -98,7 +99,7 @@
 				<p><em>Dansatorii Ansamblului Folcloric "Doina Timișului" vă pot oferii momente de neuitat!</em>
 					<br><br>Apăsați butonul de mai jos și completați formularul!</p>
 					<br><br>
-				<a href="formular.html"><button class="anim-btn"><span>Formular</span></button></a>
+				<a href="formular_ro.html"><button class="anim-btn"><span>Formular</span></button></a>
 			</div>
 			<div class="right-image hidden-xs"></div>
 		</div>
