--- a/site/repertoriu_ro.html
+++ b/site/repertoriu_ro.html
@@ -44,12 +44,201 @@
                     <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Ses 1.jpg" data-lightbox="ses"><img src="img/repertoriu/Ses 1.jpg" /></a>
-                            <a href="img/repertoriu/Ses 1.jpg" data-lightbox="ses"><img src="img/repertoriu/Ses 1.jpg" /></a>
-                            <a href="img/repertoriu/Ses 1.jpg" data-lightbox="ses"><img src="img/repertoriu/Ses 1.jpg" /></a>
-                            <a href="img/repertoriu/Ses 1.jpg" data-lightbox="ses"><img src="img/repertoriu/Ses 1.jpg" /></a>
+                            <a href="img/repertoriu/Ses 2.jpg" data-lightbox="ses"><img src="img/repertoriu/Ses 2.jpg" /></a>
+                            <a href="img/repertoriu/Ses 3.jpg" data-lightbox="ses"><img src="img/repertoriu/Ses 3.jpg" /></a>
+                            <a href="img/repertoriu/Ses 4.jpg" data-lightbox="ses"><img src="img/repertoriu/Ses 4.jpg" /></a>
                     </div>
                 </div>
                 <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Sorocuri</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Sorocuri 1.jpg" data-lightbox="sorocuri"><img src="img/repertoriu/Sorocuri 1.jpg" /></a>
+                            <a href="img/repertoriu/Sorocuri 2.jpg" data-lightbox="sorocuri"><img src="img/repertoriu/Sorocuri 2.jpg" /></a>
+                            <a href="img/repertoriu/Sorocuri 3.jpg" data-lightbox="sorocuri"><img src="img/repertoriu/Sorocuri 3.jpg" /></a>
+                            <a href="img/repertoriu/Sorocuri 4.jpg" data-lightbox="sorocuri"><img src="img/repertoriu/Sorocuri 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Munte</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Munte 1.jpg" data-lightbox="munte"><img src="img/repertoriu/Munte 1.jpg" /></a>
+                            <a href="img/repertoriu/Munte 2.jpg" data-lightbox="munte"><img src="img/repertoriu/Munte 2.jpg" /></a>
+                            <a href="img/repertoriu/Munte 3.jpg" data-lightbox="munte"><img src="img/repertoriu/Munte 3.jpg" /></a>
+                            <a href="img/repertoriu/Munte 4.jpg" data-lightbox="munte"><img src="img/repertoriu/Munte 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Brâuri</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Briuri 1.jpg" data-lightbox="briuri"><img src="img/repertoriu/Briuri 1.jpg" /></a>
+                            <a href="img/repertoriu/Briuri 2.jpg" data-lightbox="briuri"><img src="img/repertoriu/Briuri 2.jpg" /></a>
+                            <a href="img/repertoriu/Briuri 3.jpg" data-lightbox="briuri"><img src="img/repertoriu/Briuri 3.jpg" /></a>
+                            <a href="img/repertoriu/Briuri 4.jpg" data-lightbox="briuri"><img src="img/repertoriu/Briuri 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Ardelene</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Ardelene 1.jpg" data-lightbox="ardelene"><img src="img/repertoriu/Ardelene 1.jpg" /></a>
+                            <a href="img/repertoriu/Ardelene 2.jpg" data-lightbox="ardelene"><img src="img/repertoriu/Ardelene 2.jpg" /></a>
+                            <a href="img/repertoriu/Ardelene 3.jpg" data-lightbox="ardelene"><img src="img/repertoriu/Ardelene 3.jpg" /></a>
+                            <a href="img/repertoriu/Ardelene 4.jpg" data-lightbox="ardelene"><img src="img/repertoriu/Ardelene 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Iedera</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Iedera 1.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 1.jpg" /></a>
+                            <a href="img/repertoriu/Iedera 2.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 2.jpg" /></a>
+                            <a href="img/repertoriu/Iedera 3.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 3.jpg" /></a>
+                            <a href="img/repertoriu/Iedera 4.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Valea Bistrei</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Valea Bistrei 1.jpg" data-lightbox="vb"><img src="img/repertoriu/Valea Bistrei 1.jpg" /></a>
+                            <a href="img/repertoriu/Valea Bistrei 2.jpg" data-lightbox="vb"><img src="img/repertoriu/Valea Bistrei 2.jpg" /></a>
+                            <a href="img/repertoriu/Valea Bistrei 3.jpg" data-lightbox="vb"><img src="img/repertoriu/Valea Bistrei 3.jpg" /></a>
+                            <a href="img/repertoriu/Valea Bistrei 4.jpg" data-lightbox="vb"><img src="img/repertoriu/Valea Bistrei 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Valea Timișului</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Valea Timisului 1.jpg" data-lightbox="vt"><img src="img/repertoriu/Valea Timisului 1.jpg" /></a>
+                            <a href="img/repertoriu/Valea Timisului 2.jpg" data-lightbox="vt"><img src="img/repertoriu/Valea Timisului 2.jpg" /></a>
+                            <a href="img/repertoriu/Valea Timisului 3.jpg" data-lightbox="vt"><img src="img/repertoriu/Valea Timisului 3.jpg" /></a>
+                            <a href="img/repertoriu/Valea Timisului 4.jpg" data-lightbox="vt"><img src="img/repertoriu/Valea Timisului 4.jpg" /></a>
+                    </div>
+                </div>
+
+                <div class="drapel">
+                    <div class="albastru"><hr></div>
+                    <div class="galben"><hr></div>
+                    <div class="rosu"><hr></div>
+                </div>
+
+                <div class="dans">
+                    <div class="titlu">Năsăud</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Nasaud 1.jpg" data-lightbox="nasaud"><img src="img/repertoriu/Nasaud 1.jpg" /></a>
+                            <a href="img/repertoriu/Nasaud 3.jpg" data-lightbox="nasaud"><img src="img/repertoriu/Nasaud 3.jpg" /></a>
+                            <a href="img/repertoriu/Nasaud 2.jpg" data-lightbox="nasaud"><img src="img/repertoriu/Nasaud 2.jpg" /></a>
+                            <a href="img/repertoriu/Nasaud 4.jpg" data-lightbox="nasaud"><img src="img/repertoriu/Nasaud 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator" style="padding-top: 20px"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Fecioresc</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Fecioresc 1.jpg" data-lightbox="fecioresc"><img src="img/repertoriu/Fecioresc 1.jpg" /></a>
+                            <a href="img/repertoriu/Fecioresc 2.jpg" data-lightbox="fecioresc"><img src="img/repertoriu/Fecioresc 2.jpg" /></a>
+                            <a href="img/repertoriu/Fecioresc 3.jpg" data-lightbox="fecioresc"><img src="img/repertoriu/Fecioresc 3.jpg" /></a>
+                            <a href="img/repertoriu/Fecioresc 4.jpg" data-lightbox="fecioresc"><img src="img/repertoriu/Fecioresc 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Crihalma</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> de fete din zona Făgăraș (centrul țării), caracterizat prin eleganța scenică a tinerelor fete.</div>
+                    <div class="galerie" style="padding-top: 55px">
+                            <a href="img/repertoriu/Crihalma 1.jpg" data-lightbox="crihalma"><img src="img/repertoriu/Crihalma 1.jpg" /></a>
+                            <a href="img/repertoriu/Crihalma 2.jpg" data-lightbox="crihalma"><img src="img/repertoriu/Crihalma 2.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Bihor</div>
+                    <div class="descriere" style="padding: 65px 0;"><span style="margin-left:2em">Dansul</span> este jucat în câmpia de vest și în văile săpate între dealuri de cele trei Crișuri. Oamenii sunt exuberanți, iar tumultul pașilor bătuți mărunt în ritm sincopat se însoțeste cu strigătele și vorbele satirice foarte gustate de comunitatea satului.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Bihor 1.jpg" data-lightbox="bihor"><img src="img/repertoriu/Bihor 1.jpg" /></a>
+                            <a href="img/repertoriu/Bihor 2.jpg" data-lightbox="bihor"><img src="img/repertoriu/Bihor 2.jpg" /></a>
+                            <a href="img/repertoriu/Bihor 3.jpg" data-lightbox="bihor"><img src="img/repertoriu/Bihor 3.jpg" /></a>
+                            <a href="img/repertoriu/Bihor 4.jpg" data-lightbox="bihor"><img src="img/repertoriu/Bihor 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Oaș</div>
+                    <div class="descriere" style="padding: 80px 0;"><span style="margin-left:2em">Dans</span> provenind din nordul țării, dintr-o zonă folclorică unde ritmurile arhaice păstrate intacte pâna în prezent evocă mândria și curajul locuitorilor.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Oas 1.jpg" data-lightbox="oas"><img src="img/repertoriu/Oas 1.jpg" /></a>
+                            <a href="img/repertoriu/Oas 2.jpg" data-lightbox="oas"><img src="img/repertoriu/Oas 2.jpg" /></a>
+                            <a href="img/repertoriu/Oas 3.jpg" data-lightbox="oas"><img src="img/repertoriu/Oas 3.jpg" /></a>
+                            <a href="img/repertoriu/Oas 4.jpg" data-lightbox="oas"><img src="img/repertoriu/Oas 4.jpg" /></a>
+                    </div>
+                </div>
+
+                <div class="drapel">
+                    <div class="albastru"><hr></div>
+                    <div class="galben"><hr></div>
+                    <div class="rosu"><hr></div>
+                </div>
+
+                <div class="dans">
+                    <div class="titlu">Oltenia</div>
+                    <div class="descriere" style="padding: 65px 0;"><span style="margin-left:2em">Dans</span> cules din câmpia Dunării, cu valențe spectaculare deosebite. Ritmurile alerte, mișcările executate în mare viteză, pași sincopați, strigăturile de comandă, vibrația permanentă la unison a întregului grup, crează un spectacol dinamic plin de vigoare.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Oltenia 1.jpg" data-lightbox="oltenia"><img src="img/repertoriu/Oltenia 1.jpg" /></a>
+                            <a href="img/repertoriu/Oltenia 2.jpg" data-lightbox="oltenia"><img src="img/repertoriu/Oltenia 2.jpg" /></a>
+                            <a href="img/repertoriu/Oltenia 3.jpg" data-lightbox="oltenia"><img src="img/repertoriu/Oltenia 3.jpg" /></a>
+                            <a href="img/repertoriu/Oltenia 4.jpg" data-lightbox="oltenia"><img src="img/repertoriu/Oltenia 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator" style="padding-top: 20px"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Muntenia</div>
+                    <div class="descriere" style="padding: 80px 0;"><span style="margin-left:2em">Dans</span> din câmpia Dunării, cu ritmuri alerte, mișcările executate în mare viteză, bătăile la podea și strigăturile de comandă, crează un spectacol dinamic plin de vigoare.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Muntenia 1.jpg" data-lightbox="muntenia"><img src="img/repertoriu/Muntenia 1.jpg" /></a>
+                            <a href="img/repertoriu/Muntenia 2.jpg" data-lightbox="muntenia"><img src="img/repertoriu/Muntenia 2.jpg" /></a>
+                            <a href="img/repertoriu/Muntenia 3.jpg" data-lightbox="muntenia"><img src="img/repertoriu/Muntenia 3.jpg" /></a>
+                            <a href="img/repertoriu/Muntenia 4.jpg" data-lightbox="muntenia"><img src="img/repertoriu/Muntenia 4.jpg" /></a>
+                    </div>
+                </div>
+                <div class="separator"><hr></div>
+                <div class="dans">
+                    <div class="titlu">Căluș</div>
+                    <div class="descriere" style="padding: 70px 0;"><span style="margin-left:2em">Dans</span> foarte faimos în România. Dans din Muntenia executat numai de băieți, călușul se derulează extrem de spectaculos, cu lovituri ale calcâielor, bătăi apăsate în pământ, sărituri în aer, strigături.</div>
+                    <div class="galerie" style="padding-top: 55px">
+                            <a href="img/repertoriu/Calus 1.jpg" data-lightbox="calus"><img src="img/repertoriu/Calus 1.jpg" /></a>
+                            <a href="img/repertoriu/Calus 2.jpg" data-lightbox="calus"><img src="img/repertoriu/Calus 2.jpg" /></a>
+                    </div>
+                </div>
+                
+                <div class="drapel">
+                    <div class="albastru"><hr></div>
+                    <div class="galben"><hr></div>
+                    <div class="rosu"><hr></div>
+                </div>
+
+                <div class="dans">
+                    <div class="titlu">Moldova</div>
+                    <div class="descriere" style="padding: 80px 0;"><span style="margin-left:2em">Dans</span> din zona de nord-est a țării. De la început până la sfârșit dansul este colorat de strigăturile variate tematic: de îndemn la joc, satirice și lirice.</div>
+                    <div class="galerie">
+                            <a href="img/repertoriu/Moldova 1.jpg" data-lightbox="moldova"><img src="img/repertoriu/Moldova 1.jpg" /></a>
+                            <a href="img/repertoriu/Moldova 2.jpg" data-lightbox="moldova"><img src="img/repertoriu/Moldova 2.jpg" /></a>
+                            <a href="img/repertoriu/Moldova 3.jpg" data-lightbox="moldova"><img src="img/repertoriu/Moldova 3.jpg" /></a>
+                            <a href="img/repertoriu/Moldova 4.jpg" data-lightbox="moldova"><img src="img/repertoriu/Moldova 4.jpg" /></a>
+                    </div>
+                </div>
             </div>				
         </div>
         
