home+gallery english

--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
         <h3 class="body-index-h3">Timișoara - România</h3>
 
         <div class="uk-flag">
-            <a href="#"><img class="uk-flag-img" src="img/uk.png" /></a>
+            <a href="home_en.html"><img class="uk-flag-img" src="img/uk.png" /></a>
             </div>
         <div class="ro-flag">
             <a href="home_ro.html"><img class="ro-flag-img" src="img/romania.png" /></a>
